syntax = "proto3";

package ocf.cloud.grpcgateway.pb.v2;

import "github.com/plgd-dev/cloud/v2/resource-aggregate/pb/events.proto";

option go_package = "github.com/plgd-dev/cloud/v2/grpc-gateway/pb;pb";

message GetPendingCommandsRequest {
    enum Command {
      RESOURCE_CREATE = 0;
      RESOURCE_RETRIEVE = 1;
      RESOURCE_UPDATE = 2;
      RESOURCE_DELETE = 3;
      DEVICE_METADATA_UPDATE = 4;
    }
    repeated Command command_filter = 1;
    repeated string resource_id_filter = 2;
    repeated string device_id_filter = 3;
    repeated string type_filter = 4;
}

message PendingCommand {
    oneof command {
        ocf.cloud.resourceaggregate.pb.v2.ResourceCreatePending resource_create_pending = 1;
        ocf.cloud.resourceaggregate.pb.v2.ResourceRetrievePending resource_retrieve_pending = 2;
        ocf.cloud.resourceaggregate.pb.v2.ResourceUpdatePending resource_update_pending = 3;
        ocf.cloud.resourceaggregate.pb.v2.ResourceDeletePending resource_delete_pending = 4;
        ocf.cloud.resourceaggregate.pb.v2.DeviceMetadataUpdatePending device_metadata_update_pending = 5;
    }
}